--- a/.github/workflows/autoDeploy.yml
+++ b/.github/workflows/autoDeploy.yml
@@ -24,4 +24,4 @@ jobs:
               echo not killed.
           fi
 
-          python3 main.py
+          nohup python3 main.py > /dev/null 2>&1 &
