--- a/.github/workflows/manualBoot.yml
+++ b/.github/workflows/manualBoot.yml
@@ -5,6 +5,7 @@ on: [ workflow_dispatch ]
 jobs:
   boot:
     name: boot
+    runs-on: [self-hosted, linux, ARM64]
     steps:
       - uses: actions/checkout@v2
       - name: restart
