--- a/.github/workflows/autoDeployBooting.yml
+++ b/.github/workflows/autoDeployBooting.yml
@@ -16,7 +16,8 @@ jobs:
           
           echo ...UBSLEEPY deploying...
           cd /home/ruru/UBSLEEPY/
-          git --git-dir=.git pull --force origin main
+          #git --git-dir=.git pull origin main
+          git reset --hard origin main
           echo pull ok.
           
           echo ...UBSLEEPY restarting...
