PDW_SERVER_IDが用意されない不具合の修正

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "DEVELOP_ID_DICT":{
         "DEVELOPER_USER_ID": 563436616811675658,
         "DEVELOPER_GUILD_ID": "1140787268370583634",
+        "PDW_SERVER_ID": "1067125843647791114",
         "GUILD_IDS": [
             1140787268370583634,
             1067125843647791114
