--- a/config.json
+++ b/config.json
@@ -132,47 +132,53 @@
             "フェアリー": 16773333
         },
         "PRIZE_DICT": {
-            "0": [
-                "ほしのすな",
-                1500,
-                "",
-                "残念賞"
-            ],
-            "1": [
-                "きんのたま",
-                5000,
-                "やったロ❗ 1ケタ おんなじロ❗",
-                "4等"
-            ],
-            "2": [
-                "すいせいのかけら",
-                12500,
-                "2ケタが おんなじだったロミ❗",
-                "3等"
-            ],
-            "3": [
-                "ガブリアスドール",
-                65000,
-                "ロミ❗ 3ケタが おんなじロ❗",
-                "2等"
-            ],
-            "4": [
-                "こだいのせきぞう",
-                200000,
-                "すごいロ❗ 4ケタも おんなじロミ❗",
-                "1等"
-            ],
-            "5": [
-                "たかそうなカード",
-                650000,
-                "ロミ~~❗❗❗ 下5ケタ すべてが おんなじロ❗",
-                "特等"
-            ],
-            "6": [
-                "きんのパッチールぞう",
-                1000000,
-                "",
-                ""
+            "0": {
+                "prize": "ほしのすな",
+                "value": 1500,
+                "text": "",
+                "place": "残念賞"
+            }, 
+            "1": {
+                "prize": "きんのたま",
+                "value": 5000,
+                "text": "やったロ❗ 1ケタ おんなじロ❗",
+                "place": "4等"
+            },
+            "2": {
+                "prize": "すいせいのかけら",
+                "value": 12500,
+                "text": "2ケタが おんなじだったロミ❗",
+                "place": "3等"
+            },
+            "3": {
+                "prize": "ガブリアスドール",
+                "value": 65000,
+                "text": "ロミ❗ 3ケタが おんなじロ❗",
+                "place": "2等"
+            },
+            "4": {
+                "prize": "こだいのせきぞう",
+                "value": 200000,
+                "text": "すごいロ❗ 4ケタも おんなじロミ❗",
+                "place": "1等"
+            },
+            "5": {
+                "prize": "たかそうなカード",
+                "value": 650000,
+                "text": "ロミ~~❗❗❗ 下5ケタ すべてが おんなじロ❗",
+                "place": "特等"
+            },
+            "6": {
+                "prize": "きんのパッチールぞう",
+                "value": 1000000,
+                "text": "すべての数字が おんなじロ❗❓️とっておきの けいひんを あげちゃうロ❗",
+                "place": "最高等"
+            }
+        },
+        "DEFAULT_FILTER_DICT": {
+            "進化段階": [
+                "最終進化",
+                "進化しない"
             ]
         }
     }
