クイズチャンネルでの種族値クイズ自動回答機能

--- a/config.json
+++ b/config.json
@@ -15,6 +15,7 @@
             "STAGE_CHANNEL_ID": 1088518773461491892,
             "DAIRY_CHANNEL_ID": 1082026583109419018,
             "HELLO_CHANNEL_ID": 1067125844465688637,
+            "QUIZ_CHANNEL_ID": 1094729583187722300,
             "REACTIONROLE_CHANNEL_ID": 1068903858790731807,
             "CALLSTATUS_CHANNEL_ID": 1089708019677409330,
             "LOG_CHANNEL_ID": 1140787559325249717,
@@ -28,6 +29,7 @@
             "STAGE_CHANNEL_ID": 1140787559325249717,
             "DAIRY_CHANNEL_ID": 1235888298988273715,
             "HELLO_CHANNEL_ID": 1141130853469143093,
+            "QUIZ_CHANNEL_ID": 1162900525503754270,
             "REACTIONROLE_CHANNEL_ID": 1140787559325249717,
             "CALLSTATUS_CHANNEL_ID": 1140787559325249717,
             "LOG_CHANNEL_ID": 1140787559325249717,
