--- a/.github/workflows/killingRaspi.yml
+++ b/.github/workflows/killingRaspi.yml
@@ -6,6 +6,13 @@ jobs:
     name: booting
     runs-on: [self-hosted, linux, ARM64]
     steps:
+      - name: Check user permission
+        run: |
+          #!/bin/sh
+          if [ "$GITHUB_ACTOR" != "rurutheGeek" ]; then
+              echo "You are not authorized to run this workflow."
+              exit 1
+          fi
       - uses: actions/checkout@v2
       - name: deploy
         run: |
