--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ aiohttp==3.11.16
 aiosignal==1.3.2
 attrs==25.3.0
 audioop-lts==0.2.1
+contourpy==1.3.2
+cycler==0.12.1
 discord.py==2.5.2
 fonttools==4.57.0
 frozenlist==1.5.0
 idna==3.10
 jaconv==0.4.0
 kiwisolver==1.4.8
+matplotlib==3.10.1
 multidict==6.4.3
 numpy==2.2.4
 packaging==24.2
