--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -12,6 +12,7 @@ idna==3.10
 jaconv==0.4.0
 kiwisolver==1.4.8
 matplotlib==3.10.1
+japanize-matplotlib==1.1.3
 multidict==6.4.3
 numpy==2.2.4
 packaging==24.2
