--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -10,9 +10,9 @@ fonttools==4.57.0
 frozenlist==1.5.0
 idna==3.10
 jaconv==0.4.0
+japanize-matplotlib==1.1.3
 kiwisolver==1.4.8
 matplotlib==3.10.1
-japanize-matplotlib==1.1.3
 multidict==6.4.3
 numpy==2.2.4
 packaging==24.2
@@ -24,6 +24,7 @@ pypinyin==0.54.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
+setuptools==79.0.0
 six==1.17.0
 tzdata==2025.2
 yarl==1.19.0
